fix: color contrast of placeholder

--- a/src/Picky.css
+++ b/src/Picky.css
@@ -116,5 +116,5 @@
 }
 
 .picky__placeholder {
-  color: #b4b4b4;
+  color: #595959;
 }
